use records for Manifest ContestWithPlaceholders delegates to ContestDescription, not subclass ContestDescription.votes_allowed is not optional